changes in  compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       - volume:/var/lib/postgresql/data
     environment:
       -   POSTGRES_USER=postgres
-      -   POSTGRES_PASSWORD=Krpy@10271611
+      -   POSTGRES_PASSWORD=310155
       -   POSTGRESDB=dbexample1
 networks:
   network:
